--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:mysql://localhost/godelivery?createDatabaseIfNotExist=true&ServerTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=62649597
 
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
