--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost/godelivery?createDatabaseIfNotExist=true&ServerTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=62649597
+spring.datasource.password=secret-pw
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.open-in-view=true
