--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,18 @@
-spring.datasource.url=jdbc:mysql://localhost/godelivery?createDatabaseIfNotExist=true&ServerTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost/godelivery?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=secret-pw
 
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auo=update
 
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+
+spring.datasource.hikari.maximum-pool-size=30
+spring.datasource.hikari.minimum-idle=20
+spring.datasource.hikari.idle-timeout=10000
+
+
