--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,13 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-
+spring.flyway.locations=classpath:db/migration,classpath:db/datatest
 
 spring.datasource.hikari.maximum-pool-size=30
 spring.datasource.hikari.minimum-idle=20
 spring.datasource.hikari.idle-timeout=10000
+
+spring.jackson.deserialization.fail-on-unknown-properties=true
+spring.jackson.deserialization.fail-on-ignored-properties=true
 
 
